stylesheets/_session.scss
$onionPathLineColor: rgba(#7a7a7a, 0.6);

#root {
  height: 100%;
}
.subtle {
  opacity: $session-subtle-factor;
}

.soft {
  opacity: 0.4;
}

.text-center {
  text-align: center;
}

.fullwidth {
  width: 100%;
}

.break-word {
  word-break: break-all;
}

.session-icon-button svg path {
  transition: fill 0.3s ease;
}

input,
textarea {
  caret-color: var(--color-text) !important;
}

* {
  user-select: none;

  .text-selectable,
  input,
  textarea {
    user-select: text;
  }
}

::selection {
  background: var(--color-text-highlight);
}

.shadowed {
  opacity: $session-shadow-opacity;
}
.overlayed {
  opacity: $session-overlay-opacity;
  pointer-events: none;
}
.overlay {
  display: flex !important;
  z-index: 1;
}

#main-view {
  height: 100vh;
  display: flex;
  flex-grow: 1;
  position: relative;
}

.button-group > div {
  display: inline-flex;
  margin-inline-start: 5px;
  margin-inline-end: 5px;
}

.session-button {
  @mixin transparent-background($textAndBorderColor) {
    background-color: Transparent;
    background-repeat: no-repeat;
    overflow: hidden;
    outline: none;
    color: $textAndBorderColor;
    border: 2px solid $textAndBorderColor;
  }

  width: auto;
  display: flex;
  justify-content: center;
  align-items: center;
  font-weight: 700;
  user-select: none;
  white-space: nowrap;
  cursor: pointer;
  transition: $session-transition-duration;
  background-color: rgba(0, 0, 0, 0);

  &.disabled {
    cursor: default;
  }

  &.default,
  &.square,
  &.brand {
    color: var(--color-foreground-primary);

    &:not(.disabled):hover {
      background: var(--color-clickable-hovered);
    }

    &.green,
    &.white,
    &.primary,
    &.secondary,
    &.success,
    &.danger,
    &.warning {
      &.disabled {
        filter: brightness(60%);
      }
    }

    &.green {
      background-color: var(--color-accent-button);
      color: var(--color-text-opposite);
    }

    &.white {
      color: var(--color-text);
    }
    &.primary {
      background-color: var(--color-background-primary);
      color: white;

      .session-icon {
        fill: var(--color-foreground-primary);
      }
    }
    &.secondary {
      background-color: $session-color-secondary;
    }
    &.success {
      background-color: $session-color-success;
    }
    &.danger {
      background-color: $session-color-danger;
    }
    &.danger-alt {
      background-color: $session-color-danger-alt;
    }
    &.warning {
      background-color: $session-color-warning;
    }
  }

  &.brand-outline,
  &.default-outline,
  &.square-outline {
    border: none;

    &.green {
      @include transparent-background(var(--color-button-green));
    }
    &.white {
      @include transparent-background(var(--color-text));
    }
    &.primary {
      @include transparent-background($session-color-primary);
    }
    &.secondary {
      @include transparent-background($session-color-secondary);
    }
    &.danger {
      @include transparent-background($session-color-danger);
    }
    &.warning {
      @include transparent-background($session-color-warning-alt);
    }
    &.warning,
    &.danger,
    &.secondary,
    &.primary,
    &.white,
    &.green {
      &.disabled {
        filter: brightness(60%);

        &:hover {
          filter: brightness(60%);
        }
      }
    }
  }

  &.brand {
    min-width: 165px;
    height: 45px;
    align-items: center;
    padding: 0px $session-margin-lg;
    font-size: $session-font-md;
    font-family: $session-font-accent;
    border-radius: 500px;

    &:not(.disabled):hover {
      color: var(--color-text);
      border-color: var(--color-text);
    }
  }

  &.default,
  &.square,
  &.default-outline,
  &.square-outline {
    border-radius: 2px;
    height: 33px;
    padding: 0px 18px;
    font-size: $session-font-sm;
  }

  &.square,
  &.square-outline {
    border-radius: 0px;
  }

  & > *:hover:not(svg) {
    filter: brightness(80%);
  }
}

.session-label {
  color: $session-color-white;
  padding: $session-margin-sm;
  width: 100%;
  border-radius: 2px;
  text-align: center;
  &.primary {
    background-color: $session-color-primary;
  }
  &.secondary {
    background-color: $session-color-secondary;
  }
  &.success {
    background-color: $session-color-success;
  }
  &.danger {
    background-color: $session-color-danger;
  }
  &.warning {
    background-color: $session-color-warning-alt;
  }
}

.session-icon-button {
  cursor: pointer;
  display: inline-block;
  position: relative;
  opacity: 0.4;
  transform: translateZ(0);

  &:hover {
    opacity: 1;
  }
  transition: opacity $session-transition-duration;

  &.no-opacity {
    opacity: 1;
  }
}

/* CONVERSATION AND MESSAGES */
.module-conversation-header {
  height: $main-view-header-height;
}

.module-conversation-header__title-flex,
.module-conversation-header__title {
  font-weight: bold;
  width: 100%;
  display: flex;
  font-size: $session-font-md;

  &-text {
    @include session-color-subtle(var(--color-text));

    font-weight: 400;
    font-size: $session-font-sm;
    line-height: $session-font-sm;
  }

  .module-contact-name {
    width: 100%;
  }

  .module-contact-name__profile-number {
    text-align: center;
  }
}

.module-conversation-header__title {
  flex-direction: column;
}
.module-conversation-header__title-flex {
  flex-direction: row;
}
.module-conversation__user__profile-name,
.module-message__author__profile-name {
  font-style: normal;
}

.module-message__author-avatar {
  position: relative;
  margin-inline-end: 20px;
  padding-top: 5px;
  padding-inline-end: 4px;
}

.module-message--incoming {
  margin-inline-start: 0;
  margin-inline-end: auto;
}
.module-message--outgoing {
  margin-inline-end: 0;
  margin-inline-start: auto;
}

pre {
  backdrop-filter: brightness(0.8);
  padding: $session-margin-xs;
}
/* ... */

